using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace SquaresGame.Persistence
{
    public class SquaresGameDataException : Exception
    {
        public SquaresGameDataException() { }
    }
}
